# CalDavFast

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust.yml
src/: app_config.rs  architecture.rs  controllers.rs  dependency_injection.rs  lib.rs  main.rs  models.rs  server.rs
src/app/calendar/: models.rs
src/app/calendar/models/: calendar_types.rs  event.rs
src/app/calendar/models/calendar_types/: attendee.rs  event_classification.rs  event_status.rs  geolocation.rs  recurrence.rs
src/app/calendar/models/calendar_types/recurrence/: date.rs  recurrence_builder.rs  recurrence_frequency.rs  recurrence_positions.rs  recurrence_vec.rs  weekday.rs
src/app/calendar/models/calendar_types/recurrence/recurrence_frequency/: recurrence_calculator.rs  recurrence_hourly.rs  recurrence_minutely.rs  recurrence_secondly.rs
src/app/calendar/models/event/: event_builder.rs
src/architecture/: app_config.rs  dependency_injection.rs  mongodb.rs
src/controllers/: hello_controller.rs
src/models/: mymodel.rs
tests/: models_mymodel.rs  models_tests.rs  test_calendar_recurrence_date.rs  test_calendar_recurrence_freq_hourly.rs  test_calendar_recurrence_freq_minutely.rs  test_calendar_recurrence_freq_secondly.rs  test_calendar_recurrence_positions.rs  test_calendar_recurrence_vec.rs  test_calendar_recurrence_weekday.rs  test_models_mymodel.rs
tests/common/: factories.rs  mod.rs  test_runner.rs
tests/common/factories/: datetime_factory.rs  my_model_factory.rs
