[package]
name = "cal_dav_fast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddi = "0.2.1"
dotenv = "0.15.0"
mongodb = "2.4.0"
bson = { version = "2", features = ["chrono-0_4"] }
tokio = "1"
chrono = "0.4"
serde = "1"
futures = "0.3"

[dev-dependencies]
factori = "1.1.0"
test-context = "0.1.4"
lazy_static = "1.4.0"
async-trait = "0.1.68"
async_once = "0.2.6"

