[package]
name = "cal_dav_fast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddi = { version = "0.2.1", features = ["sync"] }
dotenv = "0.15.0"
mongodb = "2.4.0"
bson = { version = "2", features = ["chrono-0_4"] }
tokio = "1"
chrono = "0.4"
serde = "1"
futures = "0.3"

[dev-dependencies]
factori = "1.1.0"
once_cell = "1.17.1"

